# rcache

./: .gitignore  Cargo.toml  build.rs  readme.md
schema/: cache.capnp
src/: .#cache.rs  cache.rs  cache_capnp.rs  client.rs  codec.rs  error.rs  lib.rs  main.rs  message.rs  proto.rs  server_builder.rs  service.rs  stats.rs
src/client/: mod.rs
