[package]
name = "objcache"
version = "0.1.0"
authors = ["Davis Wahl <dwahl@signalpath.com>"]

build = "build.rs"

[lib]
path = "src/lib.rs"

[[bin]]
name = "objcache"
path = "src/main.rs"

[dependencies]
bytes = "0.4"
futures = "0.1.14"
capnp = "0.8"
capnp-futures = "0.1"
mio-uds = "*"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-io = "0.1"
deque = "0.3.2"
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"

futures-cpupool = "0.1"
clippy = "*"

[build-dependencies]
capnpc = "0.8"
